# A2A_AP2

./: .gitmodules  README.md  pyproject.toml  requirements.txt
credentials_provider/: agent.py
merchant_agent/: agent.py
shopping_agent/: agent.py
